chore: styling refactoring and fixing code linting errors